<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="error_config">Please set the %1$s constant and recompile the app.</string>
    <string name="already_registered">Device is already registered on server.</string>
    <string name="gcm_registered">From GCM: device successfully registered!</string>
    <string name="gcm_unregistered">From GCM: device successfully unregistered!</string>
    <string name="gcm_message">From GCM: you got message!</string>
    <string name="gcm_error">From GCM: error (%1$s).</string>
    <string name="gcm_recoverable_error">From GCM: recoverable error (%1$s).</string>
    <string name="gcm_deleted">From GCM: server deleted %1$d pending messages!</string>
    <string name="server_registering">Trying (attempt %1$d/%2$d) to register device on Demo Server.</string>
    <string name="server_registered">From Demo Server: successfully added device!</string>
    <string name="server_unregistered">From Demo Server: successfully removed device!</string>
    <string name="server_register_error">Could not register device on Demo Server after %1$d attempts.</string>
    <string name="server_unregister_error">Could not unregister device on Demo Server (%1$s).</string>
    <string name="options_register">Register</string>
    <string name="options_unregister">Unregister</string>
    <string name="string_content">Image</string>
    <string name="options_clear">Clear</string>
    <string name="options_exit">Exit</string>
    <string name="app_name">WSO2 Agent</string>
    <string name="empty_app_title"></string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello MDM</string>
    <string name="title_activity_display_device_info">DisplayDeviceInfo</string>
    <string name="url">http://192.168.6.6:8080/mdm/register</string>
    <string name="title_activity_register_successful">RegisterSuccessful</string>
    <string name="title_activity_entry">Entry</string>
    <string name="title_head_authentication_error">Authentication Failed</string>
    <string name="title_head_registration_error">Registration Failed</string>
    <string name="title_head_connection_error">Connection Failed</string>
    <string name="title_head_notification_error">Notification failed</string>
    <string name="device_admin_enabled">Device Admin Enabled</string>
    <string name="device_admin_disabled">Device Admin Disabled</string>
    <string name="device_not_compatible_error">You are not allowed to enroll because your device is rooted and device OS version is older than 4.0.3</string>
    <string name="device_not_compatible_error_os">You are not allowed to enroll because your device is rooted</string>
    <string name="device_not_compatible_error_root">You are not allowed to enroll because your device OS version is older than 4.0.3</string>
    <string name="title_activity_authentication_error">AuthenticationError</string>
    <string name="title_activity_notification">NotificationActivity</string>
    <string name="title_activity_notify">NotifyActivity</string>
    <string name="title_activity_agent_settings">AgentSettingsActivity</string>
    <string name="title_activity_available_operations">AvailableOperationsActivity</string>
    <string name="menu_item_operations">Operations</string>
    <string name="menu_item_pin">Change PIN</string>
    <string name="menu_item_ip">Change Server Address</string>
     <string name="menu_item_log">Debug Log</string>
    <string name="title_activity_alert">Message from EMM</string>
    <string name="device_admin_enable_alert">This will enable device administration</string>
    <string name="device_enroll_type_byod">BYOD</string>
    <string name="device_enroll_type_cope">COPE</string>
    <string name="device_enroll_type_byod_header">  BYOD (This device is my own device)</string>
    <string name="device_enroll_type_cope_header">  COPE (This device is corporate owned)</string>
    <string name="title_init_msg_error">Initialization Failed. Please try again.</string>
   	<string name="title_head_init_error">Initialization Failed</string>

    <!-- TEXT FIELD HINTS -->
    <string name="hint_new_pin">New PIN Code</string>

    <!-- TOAST MESSAGES -->
    <string name="toast_message_pin_change_success">PIN Code changed successfully</string>
    <string name="toast_message_pin_change_failed">Old pincode you entered is wrong, please try again</string>
    <string name="toast_message_enter_server_address">Please enter Server Address, i.e : www.abc.com</string>
    <string name="toast_error_username">Please enter username</string>
    <string name="toast_error_password">Please enter password</string>

    <!-- INTENT EXTRAS -->
    <string name="intent_extra_from_activity">from_activity_name</string>
    <string name="intent_extra_regid">regid</string>
    <string name="intent_extra_main_activity">main_activity_name</string>
    <string name="intent_extra_message">message</string>
    <string name="intent_extra_fresh_reg_flag">freshRegFlag</string>
    <string name="intent_extra_username">username</string>
    <string name="intent_extra_notification">notification</string>

    <!-- SHARED PREF KEYS -->
    <string name="shared_pref_package">com.mdm</string>
    <string name="shared_pref_policy">policy</string>
    <string name="shared_pref_isagreed">isAgreed</string>
    <string name="shared_pref_registered">registered</string>
    <string name="shared_pref_ip">ip</string>
    <string name="shared_pref_eula">eula</string>
    <string name="shared_pref_regId">regId</string>
    <string name="shared_pref_username">username</string>
    <string name="shared_pref_pin">pin</string>
    <string name="shared_pref_reg_success">1</string>
    <string name="shared_pref_reg_fail">0</string>
    <string name="shared_pref_reg_type">deviceType</string>
    <string name="shared_pref_sender_id">senderID</string>
    <string name="shared_pref_message_mode">mode</string>
    <string name="shared_pref_interval">interval</string>
    
    <string name="shared_pref_device_active">0</string>
    <string name="shared_pref_client_id">ClientID</string>
    <string name="shared_pref_client_secret">ClientSecret</string>
    
    <!-- PARA KEYS -->

    <!-- ERROR MESSAGES -->
    <string name="error_connect_to_server">Could not connect to server please check your internet connection and try again</string>
    <string name="error_heading_connection">Connection Error</string>
    <string name="error_registration_failed">Registration Failed</string>
    <string name="error_unregistration_failed">Unregistration Failed</string>
    <string name="error_authorization_failed">Access Denied</string>
    <string name="error_enrollment_failed">Enrollment Failed</string>
    <string name="error_enrollment_failed_detail">Enrollment failed, please contact administrator.</string>
    <string name="error_auth_failed_detail">Authentication failed due to a connection failure please check your network connection and try again.</string>
    <string name="error_authentication_failed">Incorrect login information. Please try again.</string>
    <string name="error_network_unavailable">Network connectivity is unavailable. Please check your network connectivity.</string>
    <string name="error_for_all_unknown_registration_failures">Cannot proceed the registration. Please contact administrator.</string>
    <string name="error_for_all_unknown_authentication_failures">Cannot proceed the authentication. Please contact administrator.</string>
    <string name="error_for_all_unknown_unregister_failures">Cannot unregister the device. Please contact administrator.</string>
    <string name="error_for_all_unknown_notification_failures">Cannot execute the notification. Please contact administrator.</string>
    <string name="error_internal_server">Server is unavailable. Please contact administrator.</string>
    <string name="error_invalid_server_address">Invalid server Address. Please try again.</string>

    <!-- DIALOG TITLES AND MESSAGES -->
    <string name="dialog_authenticate">Authenticating</string>
    <string name="dialog_please_wait">Please wait</string>
    <string name="dialog_checking_reg">Checking Registration Info</string>
    <string name="dialog_sender_id">Retrieving server settings</string>
    <string name="dialog_license_agreement">Retrieving policy agreement</string>
    <string name="dialog_enrolling">Enrolling Device</string>
    <string name="dialog_pin_confirmation">Are you sure you want to set </string>
    <string name="dialog_pin_confirmation_end"> as your PIN code?</string>
    <string name="dialog_init_confirmation">You have set your domain to </string>
    <string name="dialog_init_middle">Your device is a </string>
    <string name="dialog_init_end"> device, are you sure you want to proceed ?</string>
    <string name="dialog_init_end_general"> are you sure you want to proceed ?</string>
    <string name="dialog_unregister">You are trying to unregister from EMM. Are you sure you want to proceed ?</string>

    <!-- REGISTRATION -->
    <string name="register_button_start">Start registration</string>
    <string name="register_button_text">Register</string>
    <string name="register_text_view_text_unregister">Device un-registration successful, click to re-register to the MDM</string>

    <!-- AGENT SETTINGS ACTIVITY -->
    <string name="menu_item_phone_info">Phone Info</string>
    <string name="menu_item_change_pin">Change PIN code</string>
    <string name="menu_item_change_ip">Change IP address</string>

    <!-- ALREADY REGISTERED ACTIVITY -->
    <string name="dialog_message_unregistering">Unregistering Device</string>
    <string name="dialog_message_please_wait">Please wait</string>

    <!-- DEVICE INFO ACTIVITY -->
    <string name="info_label_imei">IMEI:</string>
    <string name="info_label_device">Device:</string>
    <string name="info_label_model">Model:</string>
    <string name="info_label_no_sim">No Sim</string>
    <string name="info_label_operator">Operator:</string>
    <string name="info_label_imsi">IMSI:</string>
    <string name="info_label_os">OS:</string>
    <string name="info_label_rooted">Rooted:</string>
    <string name="info_label_rooted_answer_yes">Yes</string>
    <string name="info_label_rooted_answer_no">No</string>

    <!-- BUTTON TITLES -->
    <string name="button_ok">OK</string>
    <string name="agree">Agree</string>
    <string name="cancel">Cancel</string>


    <!-- APPLICATION MANAGER -->
    <string name="application_mgr_download_location">/Download/</string>
    <string name="application_mgr_download_file_name">update.apk</string>
    <string name="application_mgr_mime">application/vnd.android.package-archive</string>
    <string name="application_package_prefix">package:</string>
    <string name="application_package_launcher_action">com.android.launcher.action.INSTALL_SHORTCUT</string>

    <!-- SERVER UTILITIES -->
    <string name="server_util_req_type_post">POST</string>
    <string name="server_util_req_type_get">GET</string>
    <string name="title_activity_log">LogActivity</string>
    
    <!--  Headings -->
     <string name="registration_heading">Set your server address here to start registration, i.e : www.abc.com</string>
    <string name="text_unregister">Device successfully registered, click to unregister from the MDM</string>
    <string name="button_unregister">Unregister</string>
    <string name="policy_agreement">Policy Agreement</string>
    <string name="enter_pin">Enter PIN Code</string>
    <string name="enter_pin_text">Please enter a PIN code to make your device safe from critical operations</string>
    <string name="set_pin">Set PIN Code</string>
    <string name="domain">Domain</string>
    <string name="username">Username</string>
    <string name="password">Password</string>




</resources>